Fix top navbar height on mobile

--- a/frontend/src/Content/Layout/top-navbar.less
+++ b/frontend/src/Content/Layout/top-navbar.less
@@ -51,6 +51,7 @@
     width: 64px;
     position: relative;
     float: left;
+    margin: -1px 0;
 
     // overlaps nav-wrapper
     z-index: 11;
