--- a/frontend/src/Navbar/Navbar.less
+++ b/frontend/src/Navbar/Navbar.less
@@ -2,6 +2,15 @@
 @import "../Content/Layout/media-queries";
 
 .topnavbar {
+
+  @media @upto-tablet {
+    .navbar-nav {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
+  }
+
+
   .navbar-search {
     &:focus, &:hover {
       color : white;
